feat: add error code for error while throttling
