# proto/openfga/v1/errors_ignore.pb.validate.go
@@ -142,6 +142,115 @@ var _ interface {
 	ErrorName() string
 } = ValidationErrorMessageResponseValidationError{}
 
+// Validate checks the field values on UnprocessableContentMessageResponse with
+// the rules defined in the proto definition for this message. If any rules
+// are violated, the first error encountered is returned, or nil if there are
+// no violations.
+func (m *UnprocessableContentMessageResponse) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on UnprocessableContentMessageResponse
+// with the rules defined in the proto definition for this message. If any
+// rules are violated, the result is a list of violation errors wrapped in
+// UnprocessableContentMessageResponseMultiError, or nil if none found.
+func (m *UnprocessableContentMessageResponse) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *UnprocessableContentMessageResponse) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	// no validation rules for Code
+
+	// no validation rules for Message
+
+	if len(errors) > 0 {
+		return UnprocessableContentMessageResponseMultiError(errors)
+	}
+
+	return nil
+}
+
+// UnprocessableContentMessageResponseMultiError is an error wrapping multiple
+// validation errors returned by
+// UnprocessableContentMessageResponse.ValidateAll() if the designated
+// constraints aren't met.
+type UnprocessableContentMessageResponseMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m UnprocessableContentMessageResponseMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m UnprocessableContentMessageResponseMultiError) AllErrors() []error { return m }
+
+// UnprocessableContentMessageResponseValidationError is the validation error
+// returned by UnprocessableContentMessageResponse.Validate if the designated
+// constraints aren't met.
+type UnprocessableContentMessageResponseValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e UnprocessableContentMessageResponseValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e UnprocessableContentMessageResponseValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e UnprocessableContentMessageResponseValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e UnprocessableContentMessageResponseValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e UnprocessableContentMessageResponseValidationError) ErrorName() string {
+	return "UnprocessableContentMessageResponseValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e UnprocessableContentMessageResponseValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sUnprocessableContentMessageResponse.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = UnprocessableContentMessageResponseValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = UnprocessableContentMessageResponseValidationError{}
+
 // Validate checks the field values on InternalErrorMessageResponse with the
 // rules defined in the proto definition for this message. If any rules are
 // violated, the first error encountered is returned, or nil if there are no violations.
